[gd_scene load_steps=4 format=3 uid="uid://dxuh0spvn2rft"]

[ext_resource type="Script" uid="uid://ckqjfqu0nne7o" path="res://Scripts/calender.gd" id="1_yyf11"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yyf11"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_21h2l"]

[node name="world" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 600.0
offset_bottom = 1300.0
color = Color(0.510913, 0.171776, 0.0795176, 1)

[node name="Calender" type="Panel" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 209.0
offset_right = 560.0
offset_bottom = 842.0
script = ExtResource("1_yyf11")

[node name="YearHeader" type="Panel" parent="Calender"]
offset_left = 10.0
offset_top = 9.0
offset_right = 510.0
offset_bottom = 91.0

[node name="YearLabel" type="Button" parent="Calender/YearHeader"]
layout_mode = 0
offset_left = 125.0
offset_top = 7.0
offset_right = 375.0
offset_bottom = 73.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_yyf11")
text = "Year"

[node name="PrevYear" type="Button" parent="Calender/YearHeader"]
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 69.0
offset_bottom = 65.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_yyf11")
text = "PREV"

[node name="NextYear" type="Button" parent="Calender/YearHeader"]
layout_mode = 0
offset_left = 428.0
offset_top = 15.0
offset_right = 478.0
offset_bottom = 65.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_yyf11")
text = "NEXT"

[node name="MonthHeader" type="Panel" parent="Calender"]
layout_mode = 0
offset_left = 10.0
offset_top = 94.0
offset_right = 510.0
offset_bottom = 176.0

[node name="MonthLabel" type="Button" parent="Calender/MonthHeader"]
layout_mode = 0
offset_left = 125.0
offset_top = 7.0
offset_right = 375.0
offset_bottom = 73.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_yyf11")
text = "Month"

[node name="PrevMonth" type="Button" parent="Calender/MonthHeader"]
layout_mode = 0
offset_left = 19.0
offset_top = 15.0
offset_right = 69.0
offset_bottom = 65.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_yyf11")
text = "PREV"

[node name="NextMonth" type="Button" parent="Calender/MonthHeader"]
layout_mode = 0
offset_left = 428.0
offset_top = 15.0
offset_right = 478.0
offset_bottom = 65.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_yyf11")
text = "NEXT"

[node name="MonthSheet" type="GridContainer" parent="Calender"]
layout_mode = 0
offset_left = 10.0
offset_top = 174.0
offset_right = 510.0
offset_bottom = 590.0
columns = 7

[node name="Monday" type="Label" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "Mon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tuesday" type="Label" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "Tue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wednesday" type="Label" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "Wed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Thursday" type="Label" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "Thu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Friday" type="Label" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "Fri"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Saturday" type="Label" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "Sat"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sunday" type="Label" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "Sun"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button2" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button3" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button4" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button5" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button5"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button6" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button6"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button7" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button7"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button8" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button8"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button9" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button9"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button10" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button10"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button11" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button11"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button12" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button12"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button13" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button13"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button14" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button14"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button15" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button15"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button16" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button16"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button17" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button17"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button18" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button18"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button19" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button19"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button20" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button20"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button21" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button21"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button22" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button22"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button23" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button23"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(0.666667, 0.337255, 0.0509804, 0.717647)

[node name="Button24" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button24"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button25" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button25"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button26" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button26"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button27" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button27"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button28" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button28"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button29" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button29"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button30" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button30"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button31" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button31"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button32" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button32"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button33" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button33"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button34" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button34"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button35" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button35"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button36" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button36"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button37" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button37"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button38" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button38"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button39" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button39"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button40" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button40"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button41" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button41"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Button42" type="Button" parent="Calender/MonthSheet"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_21h2l")

[node name="color" type="ColorRect" parent="Calender/MonthSheet/Button42"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[connection signal="pressed" from="Calender/YearHeader/PrevYear" to="Calender" method="_on_prev_year_pressed"]
[connection signal="pressed" from="Calender/YearHeader/NextYear" to="Calender" method="_on_next_year_pressed"]
[connection signal="pressed" from="Calender/MonthHeader/PrevMonth" to="Calender" method="_on_prev_month_pressed"]
[connection signal="pressed" from="Calender/MonthHeader/NextMonth" to="Calender" method="_on_next_month_pressed"]
